# kproxy-rust

./: Cargo.toml  README.md  client.example.toml  kproxy-client.service  kproxy-server.service  server.example.toml
kproxy-client/: Cargo.toml
kproxy-client/src/: conn.rs  main.rs
kproxy-core/: Cargo.toml
kproxy-core/src/conn/: mod.rs
kproxy-core/src/message/: mod.rs
kproxy-server/: Cargo.toml
src/: client.rs  config.rs  crypto.rs  main.rs  protocol.rs  server.rs  sock5_proxy.rs  socks5.rs
src/e/: mod.rs
src/message/: mod.rs
src/proxy/: mod.rs  sock5.rs
src/server/: mod.rs
src/utils/: mod.rs
